--- a/css/style.css
+++ b/css/style.css
@@ -1258,7 +1258,7 @@
   background-position: center;
   color: var(--text-light);
   padding: 8rem 0 4rem;
-  text-align: center;
+  text-align: left;
 }
 
 .executive-team {
